Fix visibility icon color: high contrast

--- a/app/javascript/styles/contrast.scss
+++ b/app/javascript/styles/contrast.scss
@@ -44,7 +44,7 @@
     right: 10px;
     top: 20px;
     font: 14px/1 FontAwesome;
-    color: #606984;
+    color: #c2cede;
   }
 
   &-unlisted .display-name,
